1.8 legacy support